# goit-pythonweb-hw-06

./: README.md  connect.py  models.py  my_select.py  pyproject.toml  seeds.py
migrations/versions/: da70a1dc0fc6_init.py
